# more-categories

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  tasks.py  tox.ini
.github/workflows/: main.yml
example/: Makefile  pelicanconf.py
example/input/: article_with_multiple_categories.rst
example/theme/templates/: article.html  base.html  category.html  index.html
pelican/plugins/: __init__.py
pelican/plugins/more_categories/: more_categories.py  test_more_categories.py
