[tool.poetry]
name = "pelican-more-categories"
version = "0.0.0"
description = "Enables nested categories and multiple categories per article"
authors = ["Oliver Urs Lenz <oliver.urs.lenz@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin"]
repository = "https://github.com/pelican-plugins/more-categories"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Documentation" = "https://docs.getpelican.com/"
"Funding" = "https://donate.getpelican.com/"
"Source" = "https://github.com/pelican-plugins/more-categories"
"Tracker" = "https://github.com/pelican-plugins/more-categories/issues"

[tool.poetry.dependencies]
python = "^3.6"
pelican = "^4.2"
markdown = {version = "^3.1.1",optional = true}

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
invoke = "^1.3"
isort = "^4.3"
livereload = "^2.6"
markdown = "^3.1.1"
pytest = ">=5.0,!=5.4.0,!=5.4.1"
pytest-cov = "^2.7"
pytest-pythonpath = "^0.7.3"
pytest-sugar = "^0.9.2"
Werkzeug = "^0.15.5"

[tool.poetry.extras]
markdown = ["markdown"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
