[tool.poetry]
name = "pelican-more-categories"
version = "0.1.0"
description = "Enables nested categories and multiple categories per article"
authors = ["Oliver Urs Lenz <oliver.urs.lenz@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin"]
repository = "https://github.com/pelican-plugins/more-categories"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Tracker" = "https://github.com/pelican-plugins/more-categories/issues"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pelican = ">=4.5"
markdown = {version = ">=3.2",optional = true}

[tool.poetry.dev-dependencies]
black = "^23"
flake8 = "^3.9"
invoke = "^2.0"
isort = "^5.12.0"
markdown = "^3.2"
pytest = "^6.0"
pytest-cov = "^2.8"
pytest-pythonpath = "^0.7.3"
pytest-sugar = "^0.9.6"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "More Categories"
git-username = "botpub"
git-email = "52496925+botpub@users.noreply.github.com"

[tool.isort]
profile = "black"

# Sort imports within their section independent of the import type
force_sort_within_sections = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
